[gd_scene load_steps=4 format=3 uid="uid://dalptlvhnlyb"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="Script" path="res://UI.gd" id="2_4ront"]
[ext_resource type="Theme" uid="uid://duasr3gme4csi" path="res://base_theme.tres" id="3_f3a1l"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_4ront")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_left = 550.0
offset_right = 800.0
offset_bottom = 600.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_f3a1l")
text = "Speed"
vertical_alignment = 1

[node name="TimeStepSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
value = 100.0

[node name="BreadthFirstButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Run Breadth First"

[node name="GreedyButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Run Greedy"

[node name="AStarButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Run A*"

[node name="ResetButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Reset Grid"

[connection signal="drag_ended" from="UI/MarginContainer/VBoxContainer/HBoxContainer/TimeStepSlider" to="UI" method="_on_time_step_slider_drag_ended"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/BreadthFirstButton" to="UI" method="_on_breadth_first_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/GreedyButton" to="UI" method="_on_greedy_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/AStarButton" to="UI" method="_on_a_star_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/ResetButton" to="UI" method="_on_reset_button_pressed"]
